Add some HTML structure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
+<!DOCTYPE hmtl>
+<html>
+<head>
+<title> </title>
+</head>
+<body>
 <h1>hello, world</h1>
+<p1> Call me Ishmael </p1>
+</body>
+</html>
