--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <h1>hello, world</h1>
-<p1> Call me Ishmael </p1>
+<p> Call me Ishmael </p>
+<img src="images/breaching_whale.jpg">
 </body>
 </html>
